--- a/login.css
+++ b/login.css
@@ -56,7 +56,9 @@
 }
 
 .topnav a {
-  color: #f2f2f2;
+  /*color: #f2f2f2; syntes inte*/ 
+  color: black;
+  font-weight: bold;
   text-align: center;
   padding: 10px 12px;
   text-decoration: none;
