--- a/blackjack.css
+++ b/blackjack.css
@@ -59,6 +59,15 @@ body, html {
     color: aliceblue; /* Moved color style here */
 }
 
+#betting {
+    width: 300px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: aliceblue; /* Moved color style here */
+}
+
 #result {
     background-color: green;
     position: absolute;
@@ -73,6 +82,12 @@ body, html {
     left: 10px;
 }
 
+#betting {
+    background-color: black;
+    position: absolute;
+    bottom: 100px; /* Adjusted bottom positioning */
+    right: 100px;
+}
 #score-bottom {
     background-color: black;
     position: absolute;
