--- a/homepage.css
+++ b/homepage.css
@@ -40,6 +40,22 @@ body {
 
 #profile-button-div {
     position: absolute;
+    right: 20px; 
+}
+
+#profile-button-div button {
+    padding: 15px 30px; 
+    font-size: 20px; 
+    cursor: pointer;
+    background-color: #ce2929; 
+    border: none;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
+}
+
+/*#profile-button-div {
+    position: absolute;
     right: 20px;
 }
 
@@ -53,7 +69,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 0;
-}
+}*/
 
 #button-container {
     display: flex;
