--- a/blackjack.css
+++ b/blackjack.css
@@ -8,18 +8,17 @@ body, html {
     display: flex;
     flex-direction: column;
     height: 100%;
-    align-items: center; /* Center children horizontally */
-    justify-content: space-around; /* Distribute children evenly */
+    align-items: center;
+    justify-content: space-around;
 }
 
 #top, #bottom {
-    flex: 1; /* Each takes up 50% of the height */
+    flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    padding: 0px;
-    position: relative; /* Add relative positioning */
+    padding: 0;
+    position: relative;
 }
 
 #top {
@@ -41,10 +40,10 @@ body, html {
 
 #hit-button, #double-button, #stay-button {
     display: none;
-    margin-top: auto; /* Push the button to the bottom */
-    margin-left: auto; /* Center the button horizontally */
+    margin-top: auto;
+    margin-left: auto;
     margin-right: auto;
-    margin-bottom: 20px; /* Adjust as needed */
+    margin-bottom: 20px;
     font-size: 25px;
     background-color: aquamarine; 
     border-radius: 10px;
@@ -56,41 +55,71 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: aliceblue; /* Moved color style here */
+    color: aliceblue;
 }
 
 #betting {
-    width: 300px;
-    height: 50px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: aliceblue; /* Moved color style here */
+    padding: 20px;
+    background-color: black;
+    border-radius: 10px;
+    color: aliceblue;
+    position: absolute;
+    bottom: 100px;
+    right: 100px;
+}
+
+#betting #p-bet {
+    margin: 0;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+#bet-button-container {
+    display: flex;
+    gap: 10px;
+}
+
+#bet-button-container button {
+    background-color: red;
+    color: white;
+    font-size: 16px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#bet-button-container button:hover {
+    background-color: darkred;
+}
+
+#money {
+    margin-top: 10px;
+    text-align: center;
 }
 
 #result {
     background-color: green;
     position: absolute;
-    top: 300px; /* Adjusted top positioning */
+    top: 300px;
     left: 100px;
 }
 
 #score-top {
     background-color: red;
     position: absolute;
-    top: 100px; /* Adjusted top positioning */
+    top: 100px;
     left: 10px;
 }
 
-#betting {
-    background-color: black;
-    position: absolute;
-    bottom: 100px; /* Adjusted bottom positioning */
-    right: 100px;
-}
 #score-bottom {
     background-color: black;
     position: absolute;
-    bottom: 100px; /* Adjusted bottom positioning */
+    bottom: 100px;
     left: 10px;
 }
